--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Dashboard</title>
+    <title>Corridor Performance Report</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
@@ -231,7 +231,7 @@
         <div class="section-title">
             <div class="line"></div>
             <div class="text">Congestion: Travel Time Index
-                <span class="material-symbols-outlined info-icon" data-tooltip="Travel Time Index = travel time under traffic conditions / free-flow travel time">info</span>
+                <span class="material-symbols-outlined info-icon" data-tooltip="Travel Time Index = travel time under traffic conditions ÷ free-flow travel time">info</span>
             </div>
             <div class="line"></div>
         </div>
